// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListBoxMenuItem should render 1`] = `
<ListBoxMenuItem
  isActive={false}
  isCategoryItem={false}
  isHighlighted={false}
>
  <div
    className="bx--list-box__menu-item"
  >
    <div
      className="bx--list-box__menu-item__option"
    >
      <span>
        ListBox.MenuItem
      </span>
    </div>
  </div>
</ListBoxMenuItem>
`;

exports[`ListBoxMenuItem should render 2`] = `
<ListBoxMenuItem
  isActive={true}
  isCategoryItem={false}
  isHighlighted={false}
>
  <div
    className="bx--list-box__menu-item bx--list-box__menu-item--active"
  >
    <div
      className="bx--list-box__menu-item__option"
    >
      <span>
        ListBox.MenuItem
      </span>
    </div>
  </div>
</ListBoxMenuItem>
`;

exports[`ListBoxMenuItem should render 3`] = `
<ListBoxMenuItem
  isActive={false}
  isCategoryItem={false}
  isHighlighted={true}
>
  <div
    className="bx--list-box__menu-item bx--list-box__menu-item--highlighted"
  >
    <div
      className="bx--list-box__menu-item__option"
    >
      <span>
        ListBox.MenuItem
      </span>
    </div>
  </div>
</ListBoxMenuItem>
`;

exports[`ListBoxMenuItem should render 4`] = `
<ListBoxMenuItem
  isActive={false}
  isCategory={true}
  isCategoryItem={false}
  isHighlighted={false}
>
  <div
    className="bx--list-box__menu-item"
    isCategory={true}
  >
    <div
      className="bx--list-box__menu-item__option"
    >
      <span>
        ListBox.MenuItem
      </span>
    </div>
  </div>
</ListBoxMenuItem>
`;
